fix: footer overlapping last tile row

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -9,6 +9,10 @@ html, body {
 	margin: auto;
 }
 
+footer {
+	position: relative;
+}
+
 .title h2 {
 	font-size: 3em;
 	text-align: center;
